02-invoke-service-remote/manifest/genid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genidsvc
  labels:
    app: genidsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genidsvc
  template:
    metadata:
      labels:
        app: genidsvc
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id:  "genidsvc"
        dapr.io/app-port: "5050"
        dapr.io/config: "genidsvc-config"
    spec:
      containers:
        - name: genidsvc
          image: registry-2:5000/genidsvc:latest
          ports:
            - containerPort: 5050
          imagePullPolicy: Always
