02-invoke-service-remote/manifest/frontendsvc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontendsvc-route
spec:
  parentRefs:
    - name: default-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontendsvc
          port: 8080
