02-invoke-service-remote/manifest/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dapr-invoke-route
spec:
  parentRefs:
    - name: default-gateway
  rules:
    - matches:
        - path:
            value: /v1.0/invoke
      backendRefs:
        - name: genidsvc-dapr
          port: 3500
