02-invoke-service-remote/manifest/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dapr-gateway-route
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`genidsvc.ingress`) && (PathPrefix(`/v1.0/invoke`) || PathPrefix(`/v1.0/metadata`))
    kind: Rule
    services:
    - name: dapr-localhost
      kind: TraefikService
